don't ignore model configs

--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@
 # Datasets -------------------------------------------------------------------------------------------------------------
 datasets/coco/
 nas_backbones/
-configs/
+configs/__pycache__/
 scripts/
 # MATLAB GitIgnore -----------------------------------------------------------------------------------------------------
 *.m~
